docs/7.58/md/abenpath_expr_in_colspec_abexa.md
---
title: "Path Expressions, Use in the SELECT List"
description: |
  This example demonstrates path expressions(https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_sql_path.htm) in the SELECT list(https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abapselect_list.htm) in ABAP SQL. Source Code  Public class definition CLASS cl_demo_cds
version: "7.58"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenpath_expr_in_colspec_abexa.htm"
abapFile: "abenpath_expr_in_colspec_abexa.htm"
keywords: ["select", "do", "if", "try", "method", "class", "data", "abenpath", "expr", "colspec", "abexa"]
---

* * *

AS ABAP Release 758, ©Copyright 2024 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_language_external_data.htm) →  [ABAP Database Access](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abendb_access.htm) →  [ABAP SQL](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_sql.htm) →  [ABAP SQL - Operands and Expressions](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_sql_operands.htm) →  [ABAP SQL - SQL Path Expressions sql\_path](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_sql_path.htm) → 

 [![](Mail.gif?object=Mail.gif "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback%20on%20ABAP%20Documentation&body=Document:%20Path%20Expressions%2C%20Use%20in%20the%20SELECT%20List%2C%20ABENPATH_EXPR_IN_COLSPEC_ABEXA%2C%20758%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion%20for
%20improvement:)

Path Expressions, Use in the SELECT List

This example demonstrates [path expressions](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_sql_path.htm) in the [SELECT list](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abapselect_list.htm) in ABAP SQL.

Source Code   

\* Public class definition
CLASS cl\_demo\_cds\_association\_path DEFINITION
  INHERITING FROM cl\_demo\_classrun
  PUBLIC
  CREATE PUBLIC.
  PUBLIC SECTION.
    METHODS main REDEFINITION.
ENDCLASS.
\* Public class implementation
CLASS cl\_demo\_cds\_association\_path IMPLEMENTATION.
  METHOD main.
    DATA carrid TYPE scarr-carrid VALUE 'AA'.
    cl\_demo\_input=>new( )->request( CHANGING field = carrid ).
    "Path expressions in ABAP SQL
    SELECT scarr~carrname,
           \\\_spfli\[ MANY TO MANY \]-connid AS connid,
           \\\_spfli\[ MANY TO MANY \]\\\_sflight\[
             MANY TO MANY \]-fldate AS fldate,
           \\\_spfli\[ MANY TO MANY \]\\\_sairport-name AS name
           FROM demo\_cds\_assoc\_scarr AS scarr
           WHERE scarr~carrid = @carrid
           ORDER BY carrname, connid, fldate
           INTO TABLE @FINAL(result1).
    "Joins in ABAP SQL
    SELECT demo\_cds\_assoc\_scarr~carrname,
           demo\_cds\_assoc\_spfli~connid,
           sflight~fldate AS fldate,
           sairport~name  AS name
           FROM demo\_cds\_assoc\_scarr
             LEFT OUTER JOIN demo\_cds\_assoc\_spfli
               ON demo\_cds\_assoc\_spfli~carrid =
                    demo\_cds\_assoc\_scarr~carrid
             LEFT OUTER JOIN demo\_cds\_sflight AS sflight
               ON sflight~carrid = demo\_cds\_assoc\_spfli~carrid AND
                  sflight~connid = demo\_cds\_assoc\_spfli~connid
             LEFT OUTER JOIN demo\_cds\_sairport AS sairport
               ON sairport~id = demo\_cds\_assoc\_spfli~airpfrom
           WHERE demo\_cds\_assoc\_scarr~carrid = @carrid
           ORDER BY demo\_cds\_assoc\_scarr~carrname,
                    demo\_cds\_assoc\_spfli~connid,
                    fldate
           INTO TABLE @FINAL(result2).
    ASSERT result1 = result2.
    "Path expressions in CDS
    SELECT \*
       FROM demo\_cds\_use\_assocs( p\_carrid = @carrid )
       ORDER BY carrname, connid, fldate
       INTO TABLE @FINAL(result3).
    ASSERT result1 = result3.
    "Joins in CDS
    SELECT \*
       FROM demo\_cds\_outer\_joins( p\_carrid = @carrid )
       ORDER BY carrname, connid, fldate
       INTO TABLE @FINAL(result4).
    ASSERT result1 = result4.
    out->write( result1 ).
  ENDMETHOD.
ENDCLASS.

Description   

The first SELECT statement accesses the CDS view entity demo\_cds\_assoc\_scarr:

@AccessControl.authorizationCheck: #NOT\_REQUIRED
define view entity demo\_cds\_assoc\_scarr
  as select from scarr
  association \[1..\*\] to demo\_cds\_assoc\_spfli as \_spfli on
    scarr.carrid = \_spfli.carrid
  {
    \_spfli,
    key carrid,
    carrname
  }

This view entity exposes its [CDS association](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abencds_association_glosry.htm "Glossary Entry") \_spfli in its SELECT list. The CDS association \_spfli uses the view entity demo\_cds\_assoc\_spfli as an [association target](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenassociation_target_glosry.htm "Glossary Entry"):

@AccessControl.authorizationCheck: #NOT\_REQUIRED
define view entity demo\_cds\_assoc\_spfli  
  as select from
    spfli
    association \[1..\*\] to demo\_cds\_sflight as \_sflight on
          spfli.carrid = \_sflight.carrid
      and spfli.connid = \_sflight.connid
    association \[1..1\] to demo\_cds\_sairport as \_sairport on
      spfli.airpfrom = \_sairport.id
    {
      \_sflight,
      \_sairport,
      key carrid,
      key connid,
      airpfrom
    }

This view entity exposes its [CDS associations](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abencds_association_glosry.htm "Glossary Entry") \_sflight and \_sairport in its SELECT list, making it possible to specify them in path expressions after \_spfli. These CDS associations use wrappers of DDIC database tables as data sources.

The SELECT statement contains three path expressions in its SELECT list alongside an elementary column specification. The first association contains only the CDS association \_spfli of the CDS view entity demo\_cds\_assoc\_scarr specified after FROM. The CDS associations of the data source of the root element are added to the other two path expressions. The path expressions specify the [cardinality](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abencardinality_glosry.htm "Glossary Entry") of the associations, which prevents syntax check warnings indicating that the path expressions affect the [cardinality](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abencardinality_glosry.htm "Glossary Entry") of the result set.

The second SELECT statement demonstrates which joins must be created in ABAP SQL to achieve the same result. This is guaranteed by an assertion.

The third SELECT statement accesses the CDS view entity demo\_cds\_use\_assocs:

@AccessControl.authorizationCheck: #NOT\_REQUIRED
define view entity demo\_cds\_use\_assocs
  with parameters
    p\_carrid :s\_carrid
  as select from
    demo\_cds\_assoc\_scarr as scarr
    {
      scarr.carrname,
      scarr.\_spfli.connid,
      scarr.\_spfli.\_sflight.fldate,
      scarr.\_spfli.\_sairport.name
    }
    where
      scarr.carrid = $parameters.p\_carrid

This view shows how the same paths specified in the SELECT statement of the view in [CDS DDL syntax](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abencds_path_expression_v1.htm) and also achieves the same result.

Finally, a fourth SELECT statement accesses the CDS view entity demo\_cds\_outer\_joins:

@AccessControl.authorizationCheck: #NOT\_REQUIRED
define view entity demo\_cds\_outer\_joins
  with parameters
    p\_carrid :s\_carrid
  as select from
                      demo\_cds\_assoc\_scarr
      left outer join demo\_cds\_assoc\_spfli on
        demo\_cds\_assoc\_spfli.carrid = demo\_cds\_assoc\_scarr.carrid
      left outer join demo\_cds\_sflight as sflight on
            sflight.carrid = demo\_cds\_assoc\_spfli.carrid
        and sflight.connid = demo\_cds\_assoc\_spfli.connid
      left outer join demo\_cds\_sairport as sairport on
        sairport.id = demo\_cds\_assoc\_spfli.airpfrom
    {
      demo\_cds\_assoc\_scarr.carrname as carrname,
      demo\_cds\_assoc\_spfli.connid   as connid,
      sflight.fldate                as fldate,
      sairport.name                 as name
    }
    where
      demo\_cds\_assoc\_scarr.carrid = $parameters.p\_carrid

In this view, the same result is again achieved using joins.